fix issue for system preferences in mobile with dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -348,3 +348,9 @@ body {
   text-shadow: 1px 1px 4px #eee;
   color: #00e676;
 }
+
+@media (prefers-color-scheme: dark) {
+  body {
+    color: #333;
+  }
+}
